--- a/app/res/layout/screen_connect_verify.xml
+++ b/app/res/layout/screen_connect_verify.xml
@@ -1,99 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="fill_parent"
-    android:background="@color/cc_core_bg"
-    android:orientation="vertical"
-    android:layout_marginStart="@dimen/content_start"
-    android:layout_marginEnd="@dimen/content_start">
-
-    <TextView
-        android:id="@+id/connect_verify_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:textColor="@color/cc_neutral_color"
-        android:textSize="@dimen/text_larger"
-        android:textAlignment="center"
-        android:text="@string/connect_verify_title"/>
-
-    <TextView
-        android:id="@+id/connect_verify_message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginBottom="10dp"
-        android:textColor="@color/cc_neutral_color"
-        android:textSize="@dimen/text_medium"
-        android:textAlignment="center"
-        android:text="@string/connect_verify_message"/>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent">
 
     <LinearLayout
-        android:id="@+id/connect_verify_fingerprint_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:background="@color/cc_core_bg"
-        android:orientation="vertical" >
-
-        <ImageView
-            android:id="@+id/connect_verify_fingerprint_icon"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_gravity="center"
-            android:src="@drawable/fingerprint"/>
-
-        <Button
-            android:id="@+id/connect_verify_fingerprint_button"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/connect_verify_configure_fingerprint"/>
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/connect_verify_or"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="@dimen/content_min_margin"
-        android:textSize="@dimen/text_medium"
-        android:text="@string/choice_or" />
-
-    <LinearLayout
-        android:id="@+id/connect_verify_pin_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/cc_core_bg"
+        android:layout_marginEnd="@dimen/content_start"
+        android:layout_marginStart="@dimen/content_start"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/connect_verify_pin_icon"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_gravity="center"
-            android:src="@drawable/pattern"/>
-
-        <Button
-            android:id="@+id/connect_verify_pin_button"
-            android:layout_width="fill_parent"
+        <LinearLayout
+            android:background="@color/cc_core_bg"
+            android:id="@+id/connect_verify_fingerprint_container"
             android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/connect_verify_fingerprint_button"
+                android:layout_gravity="center"
+                android:layout_height="wrap_content"
+                android:layout_width="fill_parent"
+                android:text="@string/connect_verify_configure_fingerprint" />
+
+            <ImageView
+                android:id="@+id/connect_verify_fingerprint_icon"
+                android:layout_gravity="center"
+                android:layout_height="90dp"
+                android:layout_width="90dp"
+                android:src="@drawable/fingerprint" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:background="@color/cc_core_bg"
+            android:id="@+id/connect_verify_pin_container"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/connect_verify_pin_button"
+                android:layout_gravity="center"
+                android:layout_height="wrap_content"
+                android:layout_width="fill_parent"
+                android:text="@string/connect_verify_configure_pin" />
+
+            <ImageView
+                android:id="@+id/connect_verify_pin_icon"
+                android:layout_gravity="center"
+                android:layout_height="90dp"
+                android:layout_width="90dp"
+                android:src="@drawable/pattern" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/connect_verify_title"
             android:layout_gravity="center"
-            android:text="@string/connect_verify_configure_pin"/>
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_width="wrap_content"
+            android:text="@string/connect_verify_title"
+            android:textAlignment="center"
+            android:textColor="@color/cc_neutral_color"
+            android:textSize="@dimen/text_larger" />
+
+        <TextView
+            android:id="@+id/connect_verify_or"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/content_min_margin"
+            android:layout_width="wrap_content"
+            android:text="@string/choice_or"
+            android:textSize="@dimen/text_medium" />
+
+        <TextView
+            android:id="@+id/connect_verify_message"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_width="wrap_content"
+            android:text="@string/connect_verify_message"
+            android:textAlignment="center"
+            android:textColor="@color/cc_neutral_color"
+            android:textSize="@dimen/text_medium" />
+
+        <TextView
+            android:id="@+id/connect_verify_password_link"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/content_min_margin"
+            android:layout_width="fill_parent"
+            android:paddingBottom="@dimen/content_start"
+            android:paddingTop="@dimen/content_start"
+            android:text="@string/connect_verify_password_only"
+            android:textAlignment="center"
+            android:textColor="@color/blue" />
 
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/connect_verify_password_link"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/content_start"
-        android:paddingTop="@dimen/content_start"
-        android:layout_margin="@dimen/content_min_margin"
-        android:layout_gravity="center"
-        android:textAlignment="center"
-        android:textColor="@color/blue"
-        android:text="@string/connect_verify_password_only"/>
-
-</LinearLayout>
+</ScrollView>
