--- a/app/res/layout/fragment_connect_learning_progress.xml
+++ b/app/res/layout/fragment_connect_learning_progress.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
@@ -63,12 +64,12 @@
 
     <ProgressBar
         android:id="@+id/connect_learning_progress_bar"
-        android:layout_width="240dp"
-        android:layout_height="240dp"
+        android:layout_width="360dp"
+        android:layout_height="360dp"
         app:layout_constraintTop_toBottomOf="@id/connect_learning_status_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp"
+        android:layout_margin="20dp"
         android:indeterminateOnly="false"
         android:progressDrawable="@drawable/progress_ring"
         android:rotation="-90"/>
@@ -154,30 +155,28 @@
         app:layout_constraintTop_toBottomOf="@id/connect_learning_progress_bar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp"/>
+        tools:text="Complete By"
+        android:layout_margin="8dp"/>
 
     <Button
         android:id="@+id/connect_learning_button"
-        android:layout_width="match_parent"
+        android:layout_width="240dp"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/connect_learning_claim_label"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        />
+        android:layout_margin="8dp"
+        tools:text="Button" />
 
     <TextView
         android:id="@+id/connect_learning_claim_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/connect_learning_button"
+        app:layout_constraintTop_toBottomOf="@id/connect_learning_complete_by_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="10dp"
-        android:text="@string/connect_learn_claim_label"
+        android:layout_margin="8dp"
+        tools:text="@string/connect_learn_claim_label"
         android:textSize="@dimen/text_large"/>
 
 
