--- a/app/res/layout/fragment_connect_learning_progress.xml
+++ b/app/res/layout/fragment_connect_learning_progress.xml
@@ -58,105 +58,127 @@
         app:layout_constraintTop_toBottomOf="@id/connect_learning_title_row"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="10dp"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:textAlignment="center"/>
 
-    <ProgressBar
-        android:id="@+id/connect_learning_progress_bar"
-        android:layout_width="360dp"
-        android:layout_height="360dp"
-        app:layout_constraintTop_toBottomOf="@id/connect_learning_status_text"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="20dp"
-        android:indeterminateOnly="false"
-        android:progressDrawable="@drawable/progress_ring"
-        android:rotation="-90"/>
-
-    <LinearLayout
-        android:id="@+id/connect_learn_progress_bar_text_container"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/connect_learning_progress_bar"
-        app:layout_constraintBottom_toBottomOf="@id/connect_learning_progress_bar"
-        app:layout_constraintStart_toStartOf="@id/connect_learning_progress_bar"
-        app:layout_constraintEnd_toEndOf="@id/connect_learning_progress_bar"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/connect_learning_progress_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:textSize="@dimen/text_larger"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/connect_learn_complete"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/connect_learning_certificate_container"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/connect_learning_central_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/connect_learning_status_text"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:orientation="vertical"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:background="@drawable/dots_rect_back"
-        android:layout_marginTop="20dp"
-        android:paddingTop="20dp"
-        android:paddingBottom="20dp"
-        android:visibility="gone"
-        >
+        app:layout_constraintTop_toBottomOf="@id/connect_learning_status_text">
+
+        <ProgressBar
+            android:id="@+id/connect_learning_progress_bar"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:indeterminateOnly="false"
+            android:progressDrawable="@drawable/progress_ring"
+            android:rotation="-90"/>
+
+        <LinearLayout
+            android:id="@+id/connect_learn_progress_bar_text_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@id/connect_learning_progress_bar"
+            app:layout_constraintBottom_toBottomOf="@id/connect_learning_progress_bar"
+            app:layout_constraintStart_toStartOf="@id/connect_learning_progress_bar"
+            app:layout_constraintEnd_toEndOf="@id/connect_learning_progress_bar"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/connect_learning_progress_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:textSize="@dimen/text_larger"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/connect_learn_complete"/>
+        </LinearLayout>
 
         <TextView
-            android:id="@+id/connect_learn_cert_title"
-            android:layout_width="match_parent"
+            android:id="@+id/connect_learning_complete_by_text"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:textColor="@color/solid_blue"
-            android:text="@string/connect_learn_certificate"
-            />
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_width="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/connect_learning_progress_bar"
+            tools:text="Complete By" />
 
-        <TextView
-            android:id="@+id/connect_learn_cert_subject"
+        <LinearLayout
+            android:id="@+id/connect_learning_certificate_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:orientation="vertical"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/dots_rect_back"
             android:layout_marginTop="20dp"
-            android:textAlignment="center"
-            />
+            android:paddingTop="20dp"
+            android:paddingBottom="20dp"
+            android:visibility="gone"
+            >
 
-        <TextView
-            android:id="@+id/connect_learn_cert_person"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:textAlignment="center"
-            android:textStyle="bold"
-            />
+            <TextView
+                android:id="@+id/connect_learn_cert_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:textColor="@color/solid_blue"
+                android:text="@string/connect_learn_certificate"
+                />
 
-        <TextView
-            android:id="@+id/connect_learn_cert_date"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:textAlignment="center"
-            />
-    </LinearLayout>
+            <TextView
+                android:id="@+id/connect_learn_cert_subject"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:textAlignment="center"
+                />
+
+            <TextView
+                android:id="@+id/connect_learn_cert_person"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                />
+
+            <TextView
+                android:id="@+id/connect_learn_cert_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:textAlignment="center"
+                />
+        </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
-        android:id="@+id/connect_learning_complete_by_text"
+        android:id="@+id/connect_learning_claim_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/connect_learning_progress_bar"
+        app:layout_constraintTop_toBottomOf="@id/connect_learning_central_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:text="Complete By"
-        android:layout_margin="8dp"/>
+        android:layout_margin="8dp"
+        tools:text="@string/connect_learn_claim_label"
+        android:textSize="@dimen/text_large"/>
 
     <Button
         android:id="@+id/connect_learning_button"
@@ -167,17 +189,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="8dp"
         tools:text="Button" />
-
-    <TextView
-        android:id="@+id/connect_learning_claim_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/connect_learning_complete_by_text"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="8dp"
-        tools:text="@string/connect_learn_claim_label"
-        android:textSize="@dimen/text_large"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
