--- a/app/res/layout/fragment_connect_delivery_details.xml
+++ b/app/res/layout/fragment_connect_delivery_details.xml
@@ -38,7 +38,7 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="20dp"
             android:layout_marginStart="20dp"
-            android:src="@drawable/calendar_heart"
+            android:src="@drawable/checklist"
             />
 
         <TextView
@@ -102,7 +102,7 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="20dp"
             android:layout_marginStart="20dp"
-            android:src="@drawable/money"
+            android:src="@drawable/money2"
             />
 
         <TextView
