--- a/app/res/layout/fragment_connect_learning_progress.xml
+++ b/app/res/layout/fragment_connect_learning_progress.xml
@@ -76,8 +76,8 @@
 
             <ProgressBar
                 android:id="@+id/connect_learning_progress_bar"
-                android:layout_width="300dp"
-                android:layout_height="300dp"
+                android:layout_width="240dp"
+                android:layout_height="240dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -175,11 +175,27 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
+            android:id="@+id/connect_progress_warning_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:layout_marginTop="20dp"
+            android:text="@string/connect_progress_warning"/>
+
+        <TextView
+            android:id="@+id/connect_progress_warning_learn_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textColor="@color/blue"
+            android:text="@string/connect_progress_warning_learn"/>
+
+        <TextView
             android:id="@+id/connect_learning_claim_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-            android:layout_margin="8dp"
+            android:layout_marginTop="20dp"
             tools:text="@string/connect_learn_claim_label"
             android:textSize="@dimen/text_large"/>
 
