--- a/app/res/layout/fragment_connect_downloading.xml
+++ b/app/res/layout/fragment_connect_downloading.xml
@@ -5,49 +5,47 @@
     android:background="@color/solid_blue"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:id="@+id/connect_downloading_icon"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="200dp"
-        android:src="@drawable/mobile_support"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:orientation="vertical"
+        android:gravity="center">
 
-    <TextView
-        android:id="@+id/connect_downloading_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/connect_downloading_icon"
-        android:layout_marginTop="20dp"
-        android:textColor="@color/white"
-        />
+        <ImageView
+            android:id="@+id/connect_downloading_icon"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/mobile_support"
+            />
 
-    <ProgressBar
-        android:id="@+id/connect_downloading_progress"
-        android:layout_width="200dp"
-        android:layout_height="10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/connect_downloading_title"
-        android:layout_marginTop="20dp"
-        style="@android:style/Widget.ProgressBar.Horizontal"
-        />
+        <TextView
+            android:id="@+id/connect_downloading_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:textColor="@color/white"
+            />
 
-    <TextView
-        android:id="@+id/connect_downloading_status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/connect_downloading_progress"
-        android:layout_marginTop="20dp"
-        android:textColor="@color/white"
-        android:visibility="invisible"
-        />
+        <ProgressBar
+            android:id="@+id/connect_downloading_progress"
+            android:layout_width="200dp"
+            android:layout_height="10dp"
+            android:layout_marginTop="20dp"
+            style="@android:style/Widget.ProgressBar.Horizontal"
+            />
+
+        <TextView
+            android:id="@+id/connect_downloading_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:textColor="@color/white"
+            android:visibility="invisible"
+            />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
