--- a/app/res/layout/connect_verification_item.xml
+++ b/app/res/layout/connect_verification_item.xml
@@ -29,10 +29,18 @@
         android:id="@+id/delivery_item_status"
         app:layout_constraintStart_toEndOf="@id/delivery_item_name"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        />
+
+    <TextView
+        android:id="@+id/delivery_item_reason"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_marginStart="10dp"
+        app:layout_constraintStart_toEndOf="@id/delivery_item_name"
+        app:layout_constraintTop_toBottomOf="@id/delivery_item_status"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
