--- a/app/res/layout/screen_login.xml
+++ b/app/res/layout/screen_login.xml
@@ -82,6 +82,26 @@
                                 android:textColor="@color/cc_neutral_color"
                                 android:textSize="@dimen/text_medium" />
 
+                            <Button
+                                android:id="@+id/connect_login_button"
+                                android:layout_width="fill_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="bottom"
+                                android:paddingBottom="@dimen/content_start"
+                                android:paddingTop="@dimen/content_start"
+                                android:visibility="gone"
+                                android:text="@string/login_button_connect"/>
+
+                            <TextView
+                                android:id="@+id/login_or"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_margin="@dimen/content_min_margin"
+                                android:textColor="@color/cc_neutral_color"
+                                android:textSize="@dimen/text_medium"
+                                android:text="@string/choice_or" />
+
                             <Spinner
                                 android:id="@+id/app_selection_spinner"
                                 android:layout_width="match_parent"
