--- a/app/res/layout/screen_connect_job_info.xml
+++ b/app/res/layout/screen_connect_job_info.xml
@@ -5,16 +5,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/nav_host_fragment_connect"
-        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:id="@+id/connect_job_info_container"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:defaultNavHost="true"
-        app:navGraph="@navigation/nav_graph_connect"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
