--- a/app/res/layout/home_screen.xml
+++ b/app/res/layout/home_screen.xml
@@ -17,7 +17,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         android:background="@drawable/dots_rect_back"
-        android:visibility="visible"
+        android:visibility="gone"
         >
         <ImageView
             android:id="@+id/connect_secondary_phone_icon"
